--- a/public/css/style.css
+++ b/public/css/style.css
@@ -51,32 +51,20 @@ table {
 /* FIN DU RESET*/
 @font-face{
 	font-family: "Roboto";
-	src: url('Roboto-Regular.ttf');
+	src: url('typo/Roboto-Regular.ttf');
 }
 
 .container-fluid{
 	padding: 0;
 }
 
+.jumbotron{
+	background-color: #79f481;
+}
+
 .page1{
   margin-top: 12%;
 	height: 500px;
-}
-
-.container-burger{
-	position: fixed;
-	margin-left: 20px;
-	margin-top: 20px;
-	display: inline-block;
-}
-
-.rond1, .rond2, .rond3{
-	margin-left: 20px;
-	width: 10px;
-	height: 10px;
-	border-radius: 10px;
-	background-color: black;
-	margin: 6px 0;
 }
 
 .menu{
@@ -112,7 +100,7 @@ body {
 
  h1{
    font-family: "Dirty Brush";
-   src: url('DirtyBrush.ttf');
+   src: url('typo/DirtyBrush.ttf');
    text-align: center;
    font-size: 10em;
    margin: 15px;
