--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -50,7 +50,7 @@
   </nav>
   <!-- end menu -->
   <!-- bloc Titre et boutons -->
-  <div class="">
+  <div class="jumbotron">
     <h1 class="display-4" id="lienPageHome">VEGGIZ</h1>
     <h3 class="lead">LE BLOG DES FRUITS ET DES LÉGUMES DE SAISONS</h3>
 
@@ -62,6 +62,7 @@
       <span class="col-md-1"></span>
       <a class="btn btn-primary main_button btn-lg col-sm-12 col-md-3" href="#lienPageForum" role="button">Forum</a>
     </div>
+  </div>
 
     <div class="pageFruitsduMois">
       <h2 id="lienPageFruit">FRUITS & LEGUMES DU MOIS </h2>
