--- a/public/css/style.css
+++ b/public/css/style.css
@@ -105,7 +105,6 @@ body {
 
  h1{
    font-family: "DirtyBrush";
-
    text-align: center;
    font-size: 10em !important;
    margin: 15px;
@@ -113,7 +112,6 @@ body {
 
  h2{
  	font-family: "DirtyBrush";
-
  	font-size: 8em;
  	margin-top: 10%;
 	margin-right: 5%;
@@ -123,8 +121,7 @@ body {
  }
 
 h3{
-  font-family: "Roboto";
-
+	font-family: "Roboto" !important;
   text-align: center;
   font-size: 2em;
   margin: 15px;
