correction typo et travail page d'accueil

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -49,20 +49,25 @@
     </div>
   </nav>
   <!-- end menu -->
+  <!-- Page accueil -->
+  <div class="pageAccueil">
   <!-- bloc Titre et boutons -->
-  <div class="jumbotron">
-    <h1 class="display-4" id="lienPageHome">VEGGIZ</h1>
-    <h3 class="lead">LE BLOG DES FRUITS ET DES LÉGUMES DE SAISONS</h3>
+    <div class="jumbotron">
+      <h1 class="text-center" id="lienPageHome">VEGGIZ</h1>
+      <h3 class="">LE BLOG DES FRUITS ET DES LÉGUMES DE SAISONS</h3>
 
-    <div class="row">
-      <span class="col-md-1"></span>
-      <a class="btn btn-primary main_button btn-lg col-sm-12 col-md-3" href="#lienPageFruit" role="button">Fruits & Légumes</a>
-      <span class="col-md-1"></span>
-      <a class="btn btn-primary main_button btn-lg col-sm-12 col-md-3" href="#lienPageMois" role="button">Mois & Saisons</a>
-      <span class="col-md-1"></span>
-      <a class="btn btn-primary main_button btn-lg col-sm-12 col-md-3" href="#lienPageForum" role="button">Forum</a>
+      <div class="row container">
+        {# <span class="col-md-1"></span> #}
+        <a class="btn btn-primary main_button btn-lg col-sm-12 col-md-3" href="#lienPageFruit" role="button">Fruits & Légumes</a>
+        <span class="col-md-1"></span>
+        <a class="btn btn-primary main_button btn-lg col-sm-12 col-md-3" href="#lienPageMois" role="button">Mois & Saisons</a>
+        <span class="col-md-1"></span>
+        <a class="btn btn-primary main_button btn-lg col-sm-12 col-md-3" href="#lienPageForum" role="button">Forum</a>
+      </div>
     </div>
   </div>
+
+
 
     <div class="pageFruitsduMois">
       <h2 id="lienPageFruit">FRUITS & LEGUMES DU MOIS </h2>
@@ -218,6 +223,7 @@
     </div>
   </div>
   <!-- end popup login -->
+</div>
 
 
 
