--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,155 +49,88 @@ table {
 }
 
 /* FIN DU RESET*/
+
+/* Déclaration des typo */
 @font-face{
 	font-family: "Roboto";
-	src: url('../typo/Roboto-Regular.ttf');
+	src: url('../typo/Roboto/Roboto-Regular.ttf');
 }
-
+@font-face{
+	font-family: "RobotoMedium";
+	src: url('../typo/Roboto/Roboto-Medium.ttf');
+}
+@font-face{
+	font-family: "RobotoBold";
+	src: url('../typo/Roboto/Roboto-Bold.ttf');
+}
 @font-face {
 	font-family: "DirtyBrush";
 	src: url("../typo/DirtyBrush.ttf");
 }
 
+/* Bloc principal */
 .container-fluid{
 	padding: 0;
 }
 
+/* Menu  */
+
+
+/* Page accueil */
+
+/* Bloc titre et boutons */
 .jumbotron{
 	background-color: #79f481;
-}
-
-.page1{
-  margin-top: 12%;
+	margin-top: 10%;
 	height: 500px;
-}
-
-.menu{
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
-
-.menu a{
-  color: black;
-  margin: 40px;
-}
-
-#icone_Connexion1{
-	position: absolute;
-	right: 100px;
-	top: 0px;
-	width: 130px;
-}
-
-#icone_Connexion2{
-	position: absolute;
-	right: 100px;
-	top: 60px;
-	width: 130px;
 }
 
 body {
  background-color: #79f481;
- font-size: 100%;
  width:100%;
  }
 
  h1{
    font-family: "DirtyBrush";
-   text-align: center;
    font-size: 10em !important;
-   margin: 15px;
- }
-
- h2{
- 	font-family: "DirtyBrush";
- 	font-size: 8em;
- 	margin-top: 10%;
-	margin-right: 5%;
-	margin-bottom: 5%;
- 	padding-top: 50px;
-	text-align: right;
+	 margin-bottom: 15px;
  }
 
 h3{
-	font-family: "Roboto" !important;
+	font-family: "RobotoMedium" !important;
   text-align: center;
   font-size: 2em;
-  margin: 15px;
+  margin: 15px 15px 5% 15px;
 }
 
-#bouton_accueil{
-	margin-top: 100px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-
+/* Boutons */
+.row{
+	margin: 0px !important;
+	align-content: center !important;
 }
 
 .main_button{
-  /*width:222px;*/
+	border-style: none;
   box-shadow: 7px 7px 1px black;
-	margin-bottom: 20px; !important;
-	 background-color: white; !important;
-	 color :  #000; !important;
-	  font-size: 1.25em;
-		 border-radius: 10px;
+	margin-bottom: 20px !important;
+ 	background-color: white !important;
+	color : #000 !important;
+	font-size: 1.25em;
+	border-radius: 10px;
 }
 
-.main_button a {
-  /*display: inline;*/
-  text-align: center;
-  color:black;
-}
-/*
-.main_button, li {
- float:left;
- background-color: white;
- margin : 20px;
- padding: 20px;
- border-radius: 10px;
- font-size: 1.25em;
- text-align: center;
- }
-*/
-#bouton_accueil li a:hover {
- color:#FFD700;
- }
- #bouton_accueil ul li ul {
-  display:none;
-  }
-
-#bouton_accueil ul li:hover ul {
- display:block;
- }
-#bouton_accueil li:hover ul li {
- float:none;
- }
-
-  .LesBoutons {
-   list-style-type:none;
-   }
-
-  .LesBoutons li {
-      text-align: center;
-   /*float:left;*/
-   background-color: white;
-   margin : 15px;
-   padding: 15px;
-   border-radius: 10px;
-   /*font-size: 1,2em;
-   box-shadow: 7px, 7px, 1px;*/
-   }
-.LesBoutons li a {
-	width:200px;
-	color:black;
-	}
-
-@media only screen and (max-width: 478px) {
-}
 
 /*PAGE FRUIT ET LEGUMES */
+
+h2{
+ font-family: "DirtyBrush";
+ font-size: 8em;
+ margin-top: 10%;
+ margin-right: 5%;
+ margin-bottom: 5%;
+ padding-top: 50px;
+ text-align: right;
+}
 
 .pageFruitsduMois {
 	background-color: white;
@@ -230,9 +163,6 @@ h3{
 	width: 100%;
   }
 
-.row{
-	display: flex;
-}
 /*.box_theme {
 	width:300px;
 	margin-right: 50px;
