--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -51,18 +51,18 @@
   <!-- end menu -->
   <!-- Page accueil -->
   <div class="pageAccueil">
-  <!-- bloc Titre et boutons -->
+  <!-- bloc Titres et boutons -->
     <div class="jumbotron">
       <h1 class="text-center" id="lienPageHome">VEGGIZ</h1>
       <h3 class="">LE BLOG DES FRUITS ET DES LÉGUMES DE SAISONS</h3>
 
       <div class="row container">
         {# <span class="col-md-1"></span> #}
-        <a class="btn btn-primary main_button btn-lg col-sm-12 col-md-3" href="#lienPageFruit" role="button">Fruits & Légumes</a>
+        <a class="btn btn-primary main_button btn-lg col-sm-8 col-md-7 col-lg-3" href="#lienPageFruit" role="button">Fruits & Légumes</a>
         <span class="col-md-1"></span>
-        <a class="btn btn-primary main_button btn-lg col-sm-12 col-md-3" href="#lienPageMois" role="button">Mois & Saisons</a>
+        <a class="btn btn-primary main_button btn-lg col-sm-8 col-md-7 col-lg-3" href="#lienPageMois" role="button">Mois & Saisons</a>
         <span class="col-md-1"></span>
-        <a class="btn btn-primary main_button btn-lg col-sm-12 col-md-3" href="#lienPageForum" role="button">Forum</a>
+        <a class="btn btn-primary main_button btn-lg col-sm-8 col-md-7 col-lg-3" href="#lienPageForum" role="button">Forum</a>
       </div>
     </div>
   </div>
@@ -90,8 +90,8 @@
 
     <div class="FORUM">
       <h2 id="lienPageForum">FORUM </h2>
-      <div class="row">
-        <div class="col-lg-4 mb-4">
+      <div class="row container center-block box_theme">
+        <div class="col-lg-4 col-md-6 col-sm-12 imgEtTxt">
           <img src="{{ asset('img/icone-coeur.png')}}" alt="icone theme" id="icone_theme">
           <a href="{{ path('theme_visu', {'slug': 'coup_d_coeur_conso'}) }}">
           <div class="texte">
@@ -100,7 +100,7 @@
           </div></a>
         </div>
 
-        <div class="col-lg-4 mb-4-s-12">
+        <div class="col-lg-4 col-md-6 col-sm-12 imgEtTxt">
           <img src="{{ asset('img/icone-gueule.png')}}" alt="icone theme" id="icone_theme">
           <a href="{{ path('theme_visu', {'slug': 'coup_d_gueule_conso'}) }}">
           <div class="texte">
@@ -110,7 +110,7 @@
           </div></a>
         </div>
 
-        <div class="col-lg-4 mb-4">
+        <div class="col-lg-4 col-md-6 col-sm-12 imgEtTxt">
           <img src="{{ asset('img/icone-bonplan.png')}}" alt="icone theme" id="icone_theme">
           <a href="{{ path('theme_visu', {'slug': 'bons_plans'}) }}">
             <div class="texte">
@@ -119,7 +119,7 @@
             </div>
           </a>
         </div>
-        <div class="col-lg-4 mb-4">
+        <div class="col-lg-4 col-md-6 col-sm-12 imgEtTxt">
             <img src="{{ asset('img/icone-avis.png')}}" alt="icone theme" id="icone_theme">
             <a href="{{ path('theme_visu', {'slug': 'avis_sur_produits'}) }}">
             <div class="texte">
@@ -129,7 +129,7 @@
             </div></a>
         </div>
 
-        <div class="col-lg-4 mb-4">
+        <div class="col-lg-4 col-md-6 col-sm-12 imgEtTxt">
             <img src="{{ asset('img/icone-conseil.png')}}" alt="icone theme" id="icone_theme">
             <a href="{{ path('theme_visu', {'slug': 'conseil'}) }}">
             <div class="texte">
@@ -164,7 +164,7 @@
         {# <h3 class="h3 mb-3 font-weight-normal">Inscription</h3> #}
 
 
-            {{ form_widget(register_form) }}
+            {{ form_widget(register_form, {'attr': {'class': 'form-control'}}) }}
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
