--- a/templates/home/discussions.html.twig
+++ b/templates/home/discussions.html.twig
@@ -21,13 +21,13 @@
         <a class="nav-link" href="{{path ('home') }}">HOME</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#lienPageFruit">FRUITS DU MOIS</a>
+        <a class="nav-link" href="{{path ('home') }}#lienPageFruit">FRUITS DU MOIS</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#lienPageMois">PLANNING DES FRUITS</a>
+        <a class="nav-link" href="{{path ('home') }}#lienPageMois">PLANNING DES FRUITS</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#lienPageForum">FORUM</a>
+        <a class="nav-link" href="{{path ('home') }}#lienPageForum">FORUM</a>
       </li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
