--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -82,10 +82,71 @@
 
     <div class="Mois&Saisons">
       <h2 id="lienPageMois">MOIS & SAISONS </h2>
-        <div></div>
-        <div></div>
-        <div></div>
-    </div>
+
+        <div id="carouselMois" class="carousel slide container" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselMois" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselMois" data-slide-to="1"></li>
+          <li data-target="#carouselMois" data-slide-to="2"></li>
+          <li data-target="#carouselMois" data-slide-to="3"></li>
+          <li data-target="#carouselMois" data-slide-to="4"></li>
+          <li data-target="#carouselMois" data-slide-to="5"></li>
+          <li data-target="#carouselMois" data-slide-to="6"></li>
+          <li data-target="#carouselMois" data-slide-to="7"></li>
+          <li data-target="#carouselMois" data-slide-to="8"></li>
+          <li data-target="#carouselMois" data-slide-to="9"></li>
+          <li data-target="#carouselMois" data-slide-to="10"></li>
+          <li data-target="#carouselMois" data-slide-to="11"></li>
+
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="{{ asset('img/Desert.jpg')}}" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="{{ asset('img/koala.jpg')}}" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="{{ asset('img/Tulips.jpg')}}" alt="Third slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="..." alt="Fourth slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="..." alt="Fifth slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="..." alt="Sixth slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="..." alt="Seventh slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="..." alt="Eighth slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="..." alt="Nineth slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="..." alt="tenth slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="..." alt="Eleventh slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="..." alt="Twelfth slide">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselMois" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselMois" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+        </div>
+
 
 
     <div class="FORUM">
