--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -71,13 +71,92 @@
 
     <div class="pageFruitsduMois">
       <h2 id="lienPageFruit">FRUITS & LEGUMES DU MOIS </h2>
-      <div class="greenBox">
-          <div class="greenOne"></div>
-          <div class="greenTwo"></div>
-          <div class="greenThree"></div>
-          <div class="greenOne"></div>
-          <div class="greenTwo"></div>
+
+      <div class="container">
+
+        <div class="row">
+          <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenOne">
+            <h4>Banane</h4>
+            <img src="img/#.png" label="icone-banane">
+          </div>
+          <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenTwo">
+            <h4>Banane</h4>
+            <img src="img/#.png" label="icone-banane">
+          </div>
+          <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenThree">
+            <h4>Banane</h4>
+            <img src="img/#.png" label="icone-banane">
+          </div>
+          <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenOne">
+            <h4>Banane</h4>
+            <img src="img/#.png" label="icone-banane">
+          </div>
+          <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenTwo">
+            <h4>Banane</h4>
+            <img src="img/#.png" label="icone-banane">
+          </div>
+          <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenThree">
+            <h4>Banane</h4>
+            <img src="img/#.png" label="icone-banane">
+          </div>
+
+        <div class"w-100"> </div>
+
+          <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenTwo">
+            <h4>Banane</h4>
+            <img src="img/#.png" label="icone-banane">
+          </div>
+          <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenThree">
+            <h4>Banane</h4>
+            <img src="img/#.png" label="icone-banane">
+          </div>
+          <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenOne">
+            <h4>Banane</h4>
+            <img src="img/#.png" label="icone-banane">
+          </div>
+          <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenTwo">
+            <h4>Banane</h4>
+            <img src="img/#.png" label="icone-banane">
+          </div>
+          <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenThree">
+            <h4>Banane</h4>
+            <img src="img/#.png" label="icone-banane">
+          </div>
+          <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenOne">
+            <h4>Banane</h4>
+            <img src="img/#.png" label="icone-banane">
+          </div>
+
+        <div class"w-100"> </div>
+
+        <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenOne">
+          <h4>Banane</h4>
+          <img src="img/#.png" label="icone-banane">
+        </div>
+        <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenTwo">
+          <h4>Banane</h4>
+          <img src="img/#.png" label="icone-banane">
+        </div>
+        <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenThree">
+          <h4>Banane</h4>
+          <img src="img/#.png" label="icone-banane">
+        </div>
+        <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenOne">
+          <h4>Banane</h4>
+          <img src="img/.png" label="icone-orange">
+        </div>
+        <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenTwo">
+          <h4>Banane</h4>
+          <img src="img/#.png" label="icone-banane">
+        </div>
+        <div class="col-lg-2 col-md-4 col-sm-12 greenBox greenThree">
+          <h4>Banane</h4>
+          <img src="img/#.png" label="icone-banane">
+        </div>
+        </div>
+
       </div>
+
     </div>
 
     <div class="Mois&Saisons">
