--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -188,7 +188,9 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
+          <div class="fond">
             <img class="d-block w-100" src="{{ asset('img/Desert.jpg')}}" alt="First slide">
+            </div>
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="{{ asset('img/koala.jpg')}}" alt="Second slide">
