--- a/public/css/style.css
+++ b/public/css/style.css
@@ -75,13 +75,40 @@ table {
 
 /* Menu  */
 
+/* popup Inscription */
+.modal-header{
+	border-bottom: none;
+	text-align: center;
+}
+.modal-footer{
+	border-top: none;
+}
+.bouton_Sinscrire{
+	background-color: #79f481;
+	border-color: #79f481;
+}
+.bouton_Sinscrire:hover{
+	background-color: #31DE3C;
+	border-color: #31DE3C;
+}
+
+/* popup Connexion */
+.bouton_SeConnecter{
+	background-color: #79f481;
+	border-color: #79f481;
+}
+.bouton_SeConnecter:hover{
+	background-color: #31DE3C;
+	border-color: #31DE3C;
+}
+
 
 /* PAGE ACCUEIL */
 
 /* Bloc titre et boutons */
 .jumbotron{
 	background-color: #79f481;
-	height: 880px;
+	height: 850px;
 }
 
 body {
@@ -94,7 +121,28 @@ body {
    font-size: 10em !important;
 	 margin-top: 13%;
 	 margin-bottom: 15px;
+	 margin-left: auto;
+	 margin-right: auto;
  }
+
+
+		@include media-breakpoint-up(sm) {
+		  h1 {
+		    font-size: 2em;
+		  }
+		}
+
+		@include media-breakpoint-up(md) {
+		  h1 {
+		    font-size: 5em;
+		  }
+		}
+
+		@include media-breakpoint-up(lg) {
+		  h1 {
+		    font-size: 10em;
+		  }
+		}
 
 h3{
 	font-family: "RobotoMedium" !important;
@@ -106,6 +154,8 @@ h3{
 /* Boutons */
  .box_boutons{
 	margin-top: 120px !important;
+	margin-left: auto;
+	margin-right: auto;
 	display: flex;
 	justify-content: center;
 }
@@ -202,6 +252,7 @@ padding: 20px;
 }
 .footer{
 	background-color:#9b9b9b;
+	color: white;
 }
 
 /* PAGE DISCUSSIONS */
@@ -219,9 +270,66 @@ h6{
 	text-align: center;
 }
 
+/* boutons page discussion */
+
 .boutons_discussion{
 	display: flex;
 	justify-content: center;
-	/* margin-left: auto; */
-	/* margin-right: 0; */
+	margin-bottom: 15px;
+}
+.bouton_retour{
+	background-color: #79f481;
+	border-color: #79f481;
+	margin-right: 10px;
+}
+.bouton_retour:hover{
+	background-color: #31DE3C;
+	border-color: #31DE3C;
+}
+.bouton_NouvelleDiscussion{
+	background-color: #79f481;
+	border-color: #79f481;
+}
+.bouton_NouvelleDiscussion:hover{
+	background-color: #31DE3C;
+	border-color: #31DE3C;
+}
+
+.list-group-item{
+	margin-left: auto;
+	margin-right: auto;
+	background-color: #f8f9fa;
+	border: none;
+	border-bottom: 4px solid #79f481;
+}
+.list-group-item:hover{
+	background-color: #F5F2EE;
+}
+.list-group-item a{
+	color: grey;
+}
+
+.list-group-item:first-child {
+	border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
+}
+.list-group-item:last-child {
+  border-bottom-right-radius: 0px;
+  border-bottom-left-radius: 0px;
+}
+
+/* PAGE CREER DISCUSSIONS */
+.box_CreerDiscussion{
+	margin-top: 100px;
+}
+.bouton_CreerDiscussion{
+	display: flex;
+	justify-content: center;
+	background-color: #79f481;
+	border-color: #79f481;
+	margin: 20px auto auto auto;
+}
+.bouton_CreerDiscussion:hover{
+	background-color: #31DE3C;
+	border-color: #31DE3C;
 }
