--- a/templates/home/discussion_create.html.twig
+++ b/templates/home/discussion_create.html.twig
@@ -11,7 +11,12 @@
 {% block body %}
 
 
-<div class="box_CreerDiscussion">
+<div class="box_pages">
+  <div class="container boutons_discussion">
+    <a class="btn btn-primary btn-sm col-sm- col-md- col-lg- bouton_retour" href="{{ path('theme_visu',{'slug':slug })}}">Retour</a>
+  </div>
+  <br>
+
   {{ form_start(form_create) }}
 
   <div class="modal-body container col-sm-10 col-md-8 col-lg-6">
