--- a/templates/home/discussion_create.html.twig
+++ b/templates/home/discussion_create.html.twig
@@ -20,7 +20,7 @@
   {{ form_start(form_create) }}
 
   <div class="modal-body container col-sm-10 col-md-8 col-lg-6">
-    <h3>Création d'une nouvelle discussion</h3
+    <h3>Création d'une nouvelle discussion</h3>
     {{ form_label(form_create.title, null, {'label_attr': {'class': 'sr-only'}}) }}
     {{ form_widget(form_create.title, {'attr': {'class': 'form-control', 'placeholder': 'Titre de la nouvelle discussion'}}) }}
     <div class="box_bouton_creer_discussion">
