--- a/templates/home/commentaire_create.html.twig
+++ b/templates/home/commentaire_create.html.twig
@@ -8,11 +8,14 @@
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
 {% endblock %}
 
+
 {% block body %}
-  {{ form_start(form_create) }}
-  {{ form_widget(form_create) }}
-    <input type="submit" name="submit" value="Enregistrer">
-  {{ form_end(form_create) }}
+<div class="box_pages">
+{{ form_start(form_create) }}
+{{ form_widget(form_create) }}
+  <input type="submit" name="submit" value="Enregistrer">
+{{ form_end(form_create) }}
+</div>
 
 
 {% endblock %}
