debug barre de menu

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -67,6 +67,7 @@ table {
 	font-family: "DirtyBrush";
 	src: url("../typo/DirtyBrush.ttf");
 }
+/* halo bootstrap */
 
 /* Bloc principal */
 .container-fluid{
