--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -35,7 +35,7 @@
           <a class="nav-link" href="#lienPageMois">MOIS & SAISONS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#lienPageForum">FORUM</a>
+          <a class="nav-link" href="{{ path('home')}}#lienPageForum">FORUM</a>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
