debug et boutons retour

--- a/templates/home/discussions.html.twig
+++ b/templates/home/discussions.html.twig
@@ -12,7 +12,7 @@
 
 <div class="box_pages">
   <h6>VEGGIZ</h6>
-    <h3>{{ name }}</h3>
+    <h3>{{ theme_title }}</h3>
   <div class="container boutons_discussion">
     <a class="btn btn-primary btn-sm col-sm- col-md- col-lg- bouton_retour" href="{{ path('home')}}#lienPageForum">Retour</a>
     <a class="btn btn-primary btn-sm col-sm- col-md- col-lg- bouton_NouveauContenu" href="{{ path('discussion_create', {'slug': theme_slug}) }}">Créer une discussion</a>
