test titre responsive

--- a/templates/home/message_create.html.twig
+++ b/templates/home/message_create.html.twig
@@ -13,7 +13,7 @@
 
 <div class="box_pages">
   <div class="container boutons_discussion">
-    <a class="btn btn-primary btn-sm col-sm- col-md- col-lg- bouton_retour" href="{{ path('message_visu',{'id': discussion_id })}}">Retour</a>
+    <a class="btn btn-primary btn-sm bouton_retour" href="{{ path('message_visu',{'id': discussion_id })}}">Retour</a>
   </div>
   <br>
 
