--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,6 +26,7 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
 	font-family: 'Roboto', sans-serif;
+	/*font-size: 16px;*/
 }
 
 a{
@@ -49,6 +50,27 @@ table {
 }
 
 /* FIN DU RESET*/
+html {
+  font-size: 1rem;
+}
+
+@include media-breakpoint-up(sm) {
+  html {
+    font-size: 1.2rem;
+  }
+}
+
+@include media-breakpoint-up(md) {
+  html {
+    font-size: 1.4rem;
+  }
+}
+
+@include media-breakpoint-up(lg) {
+  html {
+    font-size: 1.6rem;
+  }
+}
 
 /* Déclaration des typo */
 @font-face{
@@ -119,36 +141,27 @@ table {
 
 	 h1{
 	   font-family: "DirtyBrush";
-	   font-size: 10em !important;
+	   font-size: 2em !important;
 		 margin-top: 13%;
 		 margin-bottom: 15px;
 		 margin-left: auto;
 		 margin-right: auto;
 	 }
+	 @media screen and (max-width: @screen-xs) {
+	     body h2{font-size: 100px;
+				 background-color: red;
+			 }
+	 }
 
+	 @media (max-width: @screen-sm) {
+	     body h2{font-size: 30px;}
+	 }
 
-		@include media-breakpoint-up(sm) {
-		  h1 {
-		    font-size: 2em;
-		  }
-		}
-
-		@include media-breakpoint-up(md) {
-		  h1 {
-		    font-size: 5em;
-		  }
-		}
-
-		@include media-breakpoint-up(lg) {
-		  h1 {
-		    font-size: 10em;
-		  }
-		}
 
 h3{
 	font-family: "RobotoMedium" !important;
   text-align: center;
-  font-size: 2em;
+  font-size: 200%;
   margin: 15px 15px 5% 15px;
 }
 
@@ -172,11 +185,12 @@ h3{
 }
 
 
+
 /*PAGE FRUIT ET LEGUMES */
 
 h2{
  font-family: "DirtyBrush";
- font-size: 8em;
+ font-size: 10%;
  margin-top: 3%;
  margin-right: 5%;
  margin-bottom: 5%;
@@ -284,7 +298,7 @@ padding: 20px;
 		margin-right: 10px;
 	}
 	.bouton_retour:hover{
-		background-color: #31DE3C;
+		background-color: #31DE3C !important;
 		border-color: #31DE3C;
 	}
 	.bouton_NouveauContenu{
@@ -304,7 +318,7 @@ padding: 20px;
 		border-bottom: 4px solid #79f481;
 	}
 	.list-group-item:hover{
-		background-color: #F5F2EE;
+			background-color: #EBECED;
 	}
 	.list-group-item a{
 		color: grey;
@@ -332,29 +346,36 @@ padding: 20px;
 		border-color: #31DE3C;
 	}
 
+
 	/* PAGE MESSAGES */
 		.messages_liste{
-			margin-left: 0px;
 			margin-bottom: 20px;
 			margin-top: 20px;
+			padding: 30px;
+			background-color: #EBECED;
+			border-bottom: none !important;
 		}
 		.messages_liste:hover{
-			background-color: #f8f9fa;
+			background-color: #D2D3D4;
 		}
 		.commentaires_liste{
-			margin-right: 0px;
 			margin-bottom: 20px;
 		}
 		.commentaires_liste:hover{
-			background-color: #f8f9fa;
 		}
 		.bouton_Repondre {
 			background-color: #79f481;
 			border-color: #79f481;
+			margin-left: 85%;
 		}
 		.bouton_Repondre:hover{
 			background-color: #31DE3C;
 			border-color: #31DE3C;
+		}
+		.list-group ul{
+			padding-right: 30px;
+			padding-left: 30px;
+
 		}
 		.pseudo{
 			font-family: 'RobotoMedium';
