--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,7 +35,9 @@
             <a class="nav-link" href="#">Inscription</a>
           </li>
         {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-          <li class="nav-item"><a class="nav-link" href="{{ path('logout_route') }}">Se déconnecter</a>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ path('logout_route') }}">Se déconnecter</a>
+            <a class="nav-link" href="{{ path('account') }}">{{ 'Mon Compte' | upper }} </a> <!-- ajout de la rubrique Mon Compte quand on se connecte -->
           </li>
           {% else %}
             <li class="nav-item" data-toggle="modal" data-target="#loginForm">
